Added Dockerfile
1) Added property reader.
2) Removed jetty.
3) Added templater.
4) Added test for propertyReader.
5) Changed test for servlet.